fixed overlay for topics oage on tablet

--- a/src/pages/Subjects/style.css
+++ b/src/pages/Subjects/style.css
@@ -237,6 +237,13 @@
         right: 7vw;
         top: 70vh;
     }
+
+    .overlay-bg {
+        position: fixed;
+        top: 0; 
+        left: 0;
+        height: 100%;
+    }
 }
 
 @media only screen and (max-width: 450px) {
